# djvulpes

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: bzz-decoder-plan.md
src/: bzz.rs  chunk.rs  cli.rs  commands.rs  dirm.rs  document.rs  error.rs  info.rs  iw44.rs  jb2.rs  lib.rs  main.rs  navm.rs  page.rs  pdf.rs  render.rs  text.rs
src/commands/: compare.rs  dump.rs  iw44_inspect.rs
src/iw44/: tests.rs
src/pdf/: ccitt.rs  text_layer.rs
src/render/: diff.rs  tests.rs
tests/: bringhurst.rs  johnson.rs  render.rs  render_pdf.rs  text_navm.rs
tests/fixtures/bzz/: all_bytes.bzz  hello.bzz  hello.raw  patterned_1k.bzz  repeated_a.bzz  single_a.bzz
tests/fixtures/jb2/: rypka-page-1.jb2
