[package]
name = "djvulpes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
djvu-bzz = { version = "0.20.3", default-features = false, features = ["std"] }
djvu-zp = { version = "0.20.3", default-features = false }
